--- a/waybar/config
+++ b/waybar/config
@@ -8,6 +8,21 @@
     "modules-left": ["hyprland/workspaces"],
     "modules-center": ["custom/window"],
     "modules-right": ["pulseaudio", "network","custom/net_speed", "battery", "clock"],
+    "hyprland/workspaces": {
+        "format": "{icon}",
+        "format-icons": {
+            "1": "󰣇",
+            "2": "󰖟",
+            "3": "",
+            "4": "",
+            "5": "󱃪",
+            "6": "󰕼",
+            "7": "",
+            "8": "",
+            "9": "",
+            "10": ""
+        }
+    },
     "keyboard-state": {
         "numlock": true,
         "capslock": true,
