auto start terminals

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -368,4 +368,14 @@ windowrule {
 exec-once = swww-daemon
 exec-once = swww img /home/priyazsh/Pictures/Wallpaper/krishnajigoat.jpg
 exec-once = waybar
+exec-once = sleep 1 && ~/.config/hypr/scripts/startupwindows.sh
 
+# Screensot
+# Select area
+bind = , Print, exec, ~/.config/hypr/scripts/screenshot.sh select
+
+# Full screen
+bind = SUPER, Print, exec, ~/.config/hypr/scripts/screenshot.sh full
+
+# Active window
+bind = SUPER SHIFT, Print, exec, ~/.config/hypr/scripts/screenshot.sh active
